commit cui